[gd_scene load_steps=9 format=4 uid="uid://ciluydixohjfm"]

[ext_resource type="Script" uid="uid://gywytofoww74" path="res://scripts/abstract_door.gd" id="1_6fci7"]
[ext_resource type="Material" uid="uid://cupdd4e00eo2p" path="res://art/glbtf/entitiesMaterials/door/Material.001.tres" id="1_jngus"]
[ext_resource type="PackedScene" uid="uid://c6sr2w4xbnhs6" path="res://scenes/dialog_system.tscn" id="1_rrbjp"]
[ext_resource type="AudioStream" uid="uid://cp6qkv5pyy7qu" path="res://sounds/retro-video-game-coin-pickup-38299.mp3" id="4_kmqgk"]

[sub_resource type="ArrayMesh" id="ArrayMesh_40v2i"]
_surfaces = [{
"aabb": AABB(-1.0079887, -1.0000099, -1.000032, 2.0122628, 2.000039, 2.0000188),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("BQEAAP//AAAHAf7/xEUAAAAAIMmO/wAABAEAAAAAAAB1////v0UAAHP/AAD5/wAA//8k8qPqAAB0/wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_d1wtg"]
resource_name = "door_Cube_004"
_surfaces = [{
"aabb": AABB(-1.0079887, -1.0000099, -1.000032, 2.0122628, 2.000039, 2.0000188),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": ExtResource("1_jngus"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("BQEAAP//zdEHAf7/xEXw0QAAIMmO/3zVBAEAAAAAfM8EAQAAAABX+HX///+/RVf4BwH+/8RFV/h0/wAAAABX+HT/AAAAAHvW//8k8qPqh9d1////v0XX23P/AAD5/03Tc/8AAPn/B8AAACDJjv8SwP//JPKj6tm/BQEAAP//R8AEAQAAAAD/v3P/AAD5//+/dP8AAAAA/78FAQAA////v3X///+/RSL8AAAgyY7/6PwHAf7/xEUr/v//JPKj6r76nNCt18zQltdU1VDVTc1X2fy7+7v8u/u7/Lv7u/u7+7tOKWUrFygALGEjWy41LXEpwPrAAMD6vwC9+sMAw/q7AAEA/n8BAP5/AAD/fwIA/n9mf5e5sn4/uZJ9sbisgJu5")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_40v2i")

[sub_resource type="BoxShape3D" id="BoxShape3D_jngus"]
size = Vector3(2.0470428, 2.9716492, 1.0995026)

[sub_resource type="BoxShape3D" id="BoxShape3D_rrbjp"]
size = Vector3(2.872795, 2.7564697, 2.6099854)

[node name="AbstractDoor" type="StaticBody3D" groups=["interactable"]]
editor_description = "Description:
A static door that blocks the player and triggers a dialogue when interacted with inside its interaction area.

Guide:
Place in a level, adjust the InteractArea size, instance a DialogSystem as a child, and set the dialog_id to a valid dialogue entry (REFER TO JSON). Interaction only occurs when the player presses the interact key while in range."
script = ExtResource("1_6fci7")

[node name="DialogSystem" parent="." instance=ExtResource("1_rrbjp")]

[node name="DoorMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.4749194, 0, 0, 0, 0.41164017, 0, 0, 0)
mesh = SubResource("ArrayMesh_d1wtg")
skeleton = NodePath("")

[node name="DoorCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.07583094, 0.077020586, 0.047564983)
visible = false
shape = SubResource("BoxShape3D_jngus")

[node name="InteractArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.023944855, 0.117004395, 0.8049927)
shape = SubResource("BoxShape3D_rrbjp")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.40911067, 0.8204012)
light_color = Color(1, 0.37474674, 0.3056442, 1)
light_energy = 0.695
omni_range = 2.1666005

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kmqgk")
volume_db = -2.0
pitch_scale = 0.5
